Fixed more stuff that had comms with LS when it should be communicating with backend
